--- a/IOSModelBay/Views&Controllers/Notice/Views/MB_MessageReplyTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Notice/Views/MB_MessageReplyTableViewCell.xib
@@ -52,7 +52,7 @@
                             <constraint firstAttribute="height" constant="11" id="sDA-i4-x5Y"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JDT-cL-JSn">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="13" translatesAutoresizingMaskIntoConstraints="NO" id="JDT-cL-JSn">
                         <rect key="frame" x="299" y="11" width="13" height="14"/>
                         <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="11"/>
                         <color key="textColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
