--- a/IOSModelBay/Views&Controllers/Regist/MB_WriteInfoViewController.xib
+++ b/IOSModelBay/Views&Controllers/Regist/MB_WriteInfoViewController.xib
@@ -18,6 +18,7 @@
                 <outlet property="maleBtn" destination="sDL-ZM-yAR" id="sei-H0-qey"/>
                 <outlet property="usernameTF" destination="HPJ-5t-LkX" id="8Ci-iH-K4j"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="welcomeLabel" destination="PM0-AH-06t" id="LUj-fn-ErN"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
