--- a/IOSModelBay/Views&Controllers/Notice/Views/MB_MessageTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Notice/Views/MB_MessageTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -63,12 +63,14 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Lex-hO-i2h" secondAttribute="trailing" constant="8" id="1C7-ZF-lUT"/>
+                    <constraint firstItem="c5d-tx-PZV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="oKJ-bU-QLx" secondAttribute="trailing" id="1bZ-Qt-tfb"/>
                     <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="oKJ-bU-QLx" secondAttribute="bottom" constant="5" id="3Rs-h8-trn"/>
                     <constraint firstItem="SM6-xb-lnM" firstAttribute="top" secondItem="GQL-oa-Fkp" secondAttribute="top" id="C3e-N0-HcA"/>
                     <constraint firstItem="Lex-hO-i2h" firstAttribute="centerY" secondItem="GQL-oa-Fkp" secondAttribute="centerY" id="E8g-Ji-Txo"/>
                     <constraint firstItem="Lex-hO-i2h" firstAttribute="leading" secondItem="c5d-tx-PZV" secondAttribute="trailing" constant="5" id="K0o-1E-JlS"/>
                     <constraint firstItem="oKJ-bU-QLx" firstAttribute="top" secondItem="GQL-oa-Fkp" secondAttribute="bottom" constant="9" id="KcB-iY-Vzn"/>
                     <constraint firstItem="oKJ-bU-QLx" firstAttribute="leading" secondItem="GQL-oa-Fkp" secondAttribute="leading" id="f3g-Fv-KL1"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oKJ-bU-QLx" secondAttribute="trailing" constant="12" id="h5t-Yy-RYW"/>
                     <constraint firstItem="SM6-xb-lnM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="ibi-sA-wT2"/>
                     <constraint firstItem="Lex-hO-i2h" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5kR-jP-Zqb" secondAttribute="trailing" constant="5" id="jsq-bO-bkK"/>
                     <constraint firstItem="SM6-xb-lnM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="prz-eG-b95"/>
@@ -77,6 +79,11 @@
                     <constraint firstItem="Lex-hO-i2h" firstAttribute="centerY" secondItem="c5d-tx-PZV" secondAttribute="centerY" id="wjc-ab-wXf"/>
                     <constraint firstItem="Lex-hO-i2h" firstAttribute="centerY" secondItem="5kR-jP-Zqb" secondAttribute="centerY" id="xyt-nZ-TAM"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="1bZ-Qt-tfb"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="messageLabel" destination="oKJ-bU-QLx" id="vi6-Mi-4bx"/>
